# octobot

./: .gitignore  .replit  CHANGELOG.md  LICENSE  README.md  california_outdoor_restaurants.md  chocolate-chip-cookies.html  desktop.py  main-chat.py  main.py  pyproject.toml  recipe.html  replit.md  requirements.txt  start.bat  start.sh  test123.txt
attached_assets/: Pasted-The-video-details-how-to-implement-Anthropic-s-new-adva_1771966154973.txt
community/agents/: data-analyst.yaml  designer.yaml  devops.yaml  qa-tester.yaml  writer.yaml
examples/: cookie-recipe-research.html
octobot/: agent.py  approval.py  browser.py  cli.py  config.py  history.py  identity.py  memory.py  octopus.py  router.py  sandbox.py  skills.py  subagent.py  tools.py  updater.py
octoweb/: app.py
octoweb/static/: app.js  style.css
octoweb/templates/: index.html
synthchat/: README.md  agent_loader.py  agents.py  app.py  channels.py  documents.py  engine.py  history.py  scheduler.py
synthchat/static/: app.js  manifest.json  style.css  sw.js
synthchat/templates/: synthchat.html
