[project]
name = "octobot"
version = "0.1.0"
description = "Locally-runnable, super efficient AI tool-calling agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.83.0",
    "click>=8.1.0",
    "flask>=3.0.0",
    "fpdf2",
    "httpx>=0.27.0",
    "pillow",
    "playwright>=1.58.0",
    "pyyaml",
    "rich>=13.0.0",
    "trafilatura>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["octobot*", "octoweb*", "synthchat*"]

[project.scripts]
octobot = "octobot.cli:main"
